--- a/index.html
+++ b/index.html
@@ -8,6 +8,68 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="horarios">
+            <p>Nuestro horario es: L-V: de 09:00 a 20:30 | S y D: de 10:00 a 19:00</p>
+        </div>
+        <div class="logo">MásOcasion</div>
+        <nav>
+            <a href="#">Buena Mano</a>
+            <a href="#">Financiación</a>
+            <a href="#">¿Por qué MásOcasion?</a>
+            <a href="#">848 00 00 00</a>
+        </nav>
+        <button class="Login">Login</button>
+    </header>
+    <section class="sub-cabecallo">
+        <input type="text" placeholder="Escribe aqui en nombre del coche de tus sueños!">
+        <h1>Nº1 en Europa en venta de coches de ocasión</h1>
+        <p>Compra o vende tu coche en una sola visita. +2.250 coches de segunda mano te están esperando.</p>
+        <button class="comprar">Comprar</button>
+        <button class="vender">Vender</button> 
+        <div class="selos">
+            <div class="precio">Mejor precio garatinzado</div>
+            <div class="garanticia">15 dias o 1000km para probarlo</div>
+            <div class="entrega">Entrega GRATIS en 24h en tu casa</div>
+        </div>       
+    </section>
+    <section class="pesquisa">
+        <h3>¿Cual te gusta más?</h3>
+        <p>Haz clic en el que más te gusta y mira las opciones que tiene</p>
+        <div class="items-pesquisa">
+            <div class="4x4-SUV">
+                <img src="images/imagem-pesquisa/4-x-4-suv-blue.png" alt="4x4">
+                <p>4 x 4 SUV</p>
+            </div>
+            <div class="compacto">
+                <img src="images/imagem-pesquisa/compacto-blue.png" alt="compacto">
+                <p>Compacto</p>
+            </div>
+            <div class="berlina">
+                <img src="images/imagem-pesquisa/berlina-blue.png" alt="berlina">
+                <p>berlina</p>
+            </div>
+            <div class="furgoneta">
+                <img src="images/imagem-pesquisa/furgoneta-blue.png" alt="furgoneta">
+                <p>Furgoneta</p>
+            </div>
+            <div class="monovolumen">
+                <img src="images/imagem-pesquisa/monovolumen-blue.png" alt="monovolumen">
+                <p>monovolumen</p>
+            </div>
+            <div class="familiar">
+                <img src="images/imagem-pesquisa/familiar-blue.png" alt="familiar">
+                <p>Familiar</p>
+            </div>
+            <div class="coupe">
+                <img src="images/imagem-pesquisa/coupe-blue.png" alt="coupe">
+                <p>Coupé</p>
+            </div>
+            <div class="cabrio">
+                <img src="images/imagem-pesquisa/cabrio-blue.png" alt="cabrio">
+                <p>Cabrio</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
