--- a/index.html
+++ b/index.html
@@ -9,30 +9,36 @@
 </head>
 <body>
     <header>
-        <div class="horarios">
-            <p>Nuestro horario es: L-V: de 09:00 a 20:30 | S y D: de 10:00 a 19:00</p>
-        </div>
-        <div class="logo">MásOcasion</div>
-        <nav>
-            <a href="#">Buena Mano</a>
-            <a href="#">Financiación</a>
-            <a href="#">¿Por qué MásOcasion?</a>
-            <a href="#">848 00 00 00</a>
-        </nav>
-        <button class="Login">Login</button>
+        <section class="supercabecallo">
+            <div class="horarios">
+                <p>Nuestro horario es: L-V: de 09:00 a 20:30 | S y D: de 10:00 a 19:00</p>
+            </div>
+            <article>
+                <div class="logo">MásOcasion</div>
+                <section class="cabecallo">
+                    <nav>
+                        <a href="#">Buena Mano</a>
+                        <a href="#">Financiación</a>
+                        <a href="#">¿Por qué MásOcasion?</a>
+                        <a href="#">848 00 00 00</a>
+                    </nav>
+                    <button class="Login">Login</button>
+                </section>
+            </article>
+        </section>
+        <section class="sub-cabecallo">
+            <input type="text" placeholder="Escribe aqui el nombre del coche de tus sueños!">
+            <h1>Nº1 en Europa en venta de coches de ocasión</h1>
+            <p>Compra o vende tu coche en una sola visita. +2.250 coches de segunda mano te están esperando.</p>
+            <button class="comprar">Comprar</button>
+            <button class="vender">Vender</button>
+            <div class="selos">
+                <div class="precio">Mejor precio garatinzado</div>
+                <div class="garanticia">15 dias o 1000km para probarlo</div>
+                <div class="entrega">Entrega GRATIS en 24h en tu casa</div>
+            </div>
+        </section>
     </header>
-    <section class="sub-cabecallo">
-        <input type="text" placeholder="Escribe aqui en nombre del coche de tus sueños!">
-        <h1>Nº1 en Europa en venta de coches de ocasión</h1>
-        <p>Compra o vende tu coche en una sola visita. +2.250 coches de segunda mano te están esperando.</p>
-        <button class="comprar">Comprar</button>
-        <button class="vender">Vender</button> 
-        <div class="selos">
-            <div class="precio">Mejor precio garatinzado</div>
-            <div class="garanticia">15 dias o 1000km para probarlo</div>
-            <div class="entrega">Entrega GRATIS en 24h en tu casa</div>
-        </div>       
-    </section>
     <section class="pesquisa">
         <h3>¿Cual te gusta más?</h3>
         <p>Haz clic en el que más te gusta y mira las opciones que tiene</p>
@@ -94,7 +100,7 @@
         <article class="finan">
             <img src="images/ventajas/finan-inmediata.svg" alt="">
             <h3>Financiación fácil</h3>
-            <p>Te ofrecemos financiación para tu coche sin que tengas que cambiar de banco. ¡Sin complicaciones!</p>
+            <p>Te ofrecemos financiación para tu coche sin que tengas que cambiar de banco. ¡Sin complicaciones!    </p>
         </article>
     </section>
 </body>
