--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <h1>Nº1 en Europa en venta de coches de ocasión</h1>
             <input type="text" placeholder="Escribe aqui el nombre del coche de tus sueños!">
             <p>Compra o vende tu coche en una sola visita. +2.250 coches de segunda mano te están esperando.</p>
-            <button class="comprar">Comprar</button>
-            <button class="vender">Vender</button>
+            <div class="buttons">
+                <button class="comprar">Comprar</button>
+                <button class="vender">Vender</button>
+            </div>
             <div class="selos">
                 <div class="precio">Mejor precio garatinzado</div>
                 <div class="garanticia">15 dias o 1000km para probarlo</div>
