--- a/index.html
+++ b/index.html
@@ -35,9 +35,18 @@
                 <button class="vender">Vender</button>
             </div>
             <div class="selos">
-                <div class="precio">Mejor precio garatinzado</div>
-                <div class="garanticia">15 dias o 1000km para probarlo</div>
-                <div class="entrega">Entrega GRATIS en 24h en tu casa</div>
+                <div class="precio">
+                    <img src="images/imagem-pesquisa/best-price.svg" alt="">
+                    <p><strong>Mejor precio</strong> garatinzado</p>
+                </div>
+                <div class="garanticia">
+                    <img src="images/imagem-pesquisa/car-connect.svg" alt="">
+                    <p><strong>15 dias</strong> o <strong>1000 km</strong> <br>para probarlo</p>
+                </div>
+                <div class="entrega">
+                    <img src="images/imagem-pesquisa/car-key-delivery.svg" alt="">
+                    <p><strong>Entrega GRATIS</strong> <br>en 24h en tu casa</p>
+                </div>
             </div>
         </section>
     </header>
@@ -45,37 +54,41 @@
         <h3>¿Cual te gusta más?</h3>
         <p>Haz clic en el que más te gusta y mira las opciones que tiene</p>
         <div class="items-pesquisa">
-            <div class="4x4-SUV">
-                <img src="images/imagem-pesquisa/4-x-4-suv-blue.png" alt="4x4">
-                <p>4 x 4 SUV</p>
+            <div class="linha1">
+                <div class="SUV-4x4">
+                    <img src="images/imagem-pesquisa/4-x-4-suv-blue.png" alt="4x4">
+                    <p>4 x 4 SUV</p>
+                </div>
+                <div class="compacto">
+                    <img src="images/imagem-pesquisa/compacto-blue.png" alt="compacto">
+                    <p>Compacto</p>
+                </div>
+                <div class="berlina">
+                    <img src="images/imagem-pesquisa/berlina-blue.png" alt="berlina">
+                    <p>berlina</p>
+                </div>
+                <div class="furgoneta">
+                    <img src="images/imagem-pesquisa/furgoneta-blue.png" alt="furgoneta">
+                    <p>Furgoneta</p>
+                </div>
             </div>
-            <div class="compacto">
-                <img src="images/imagem-pesquisa/compacto-blue.png" alt="compacto">
-                <p>Compacto</p>
-            </div>
-            <div class="berlina">
-                <img src="images/imagem-pesquisa/berlina-blue.png" alt="berlina">
-                <p>berlina</p>
-            </div>
-            <div class="furgoneta">
-                <img src="images/imagem-pesquisa/furgoneta-blue.png" alt="furgoneta">
-                <p>Furgoneta</p>
-            </div>
-            <div class="monovolumen">
-                <img src="images/imagem-pesquisa/monovolumen-blue.png" alt="monovolumen">
-                <p>monovolumen</p>
-            </div>
-            <div class="familiar">
-                <img src="images/imagem-pesquisa/familiar-blue.png" alt="familiar">
-                <p>Familiar</p>
-            </div>
-            <div class="coupe">
-                <img src="images/imagem-pesquisa/coupe-blue.png" alt="coupe">
-                <p>Coupé</p>
-            </div>
-            <div class="cabrio">
-                <img src="images/imagem-pesquisa/cabrio-blue.png" alt="cabrio">
-                <p>Cabrio</p>
+            <div class="linha2">
+                <div class="monovolumen">
+                    <img src="images/imagem-pesquisa/monovolumen-blue.png" alt="monovolumen">
+                    <p>monovolumen</p>
+                </div>
+                <div class="familiar">
+                    <img src="images/imagem-pesquisa/familiar-blue.png" alt="familiar">
+                    <p>Familiar</p>
+                </div>
+                <div class="coupe">
+                    <img src="images/imagem-pesquisa/coupe-blue.png" alt="coupe">
+                    <p>Coupé</p>
+                </div>
+                <div class="cabrio">
+                    <img src="images/imagem-pesquisa/cabrio-blue.png" alt="cabrio">
+                    <p>Cabrio</p>
+                </div>
             </div>
         </div>
     </section>
