--- a/index.html
+++ b/index.html
@@ -93,30 +93,32 @@
         </div>
     </section>
     <section class="banner-family">
-        <img src="images/imagem-pesquisa/banner.jpg" alt="banner family">
+        <picture><img src="images/imagem-pesquisa/banner.jpg" alt="banner family"></picture>
     </section>
     <section class="ventajas">
         <h2>Ventajas al comprar un coche de Buena Mano</h2>
-        <article class="precio">
-            <img src="images/ventajas/mejor_precio.svg" alt="">
-            <h3>Mejor precio garatizado</h3>
-            <p>Con un único punto de venta físico y nuestro modelo de negocio digital ahorramos costes para garantizarte los precios más bajos. ¡Te devolvemos la diferencia!</p>
-        </article>
-        <article class="revisiones">
-            <img src="images/ventajas/car-revision.svg" alt="">
-            <h3>Revisamos y reacondicionamos</h3>
-            <p>En nuestra fábrica preparamos los coches tras una revisión de 270 puntos, por eso, nuestros coches son coches de buena mano.</p>
-        </article>
-        <article class="prueba">
-            <img src="images/ventajas/car-connect.svg" alt="">    
-            <h3>15 días de prueba</h3>
-            <p>o 1.000 kilómetros para que pruebes todo su potencial. Y añadimos un año de garantía ampliable.</p>        
-        </article>
-        <article class="finan">
-            <img src="images/ventajas/finan-inmediata.svg" alt="">
-            <h3>Financiación fácil</h3>
-            <p>Te ofrecemos financiación para tu coche sin que tengas que cambiar de banco. ¡Sin complicaciones!    </p>
-        </article>
+        <section class="ventajas-banners">
+            <article class="precio">
+                <img src="images/ventajas/mejor_precio.svg" alt="">
+                <h3>Mejor precio garatizado</h3>
+                <p>Con un único punto de venta físico y nuestro modelo de negocio digital ahorramos costes para garantizarte los precios más bajos. ¡Te devolvemos la diferencia!</p>
+            </article>
+            <article class="revisiones">
+                <img src="images/ventajas/car-revision.svg" alt="">
+                <h3>Revisamos y reacondicionamos</h3>
+                <p>En nuestra fábrica preparamos los coches tras una revisión de 270 puntos, por eso, nuestros coches son coches de buena mano.</p>
+            </article>
+            <article class="prueba">
+                <img src="images/ventajas/car-connect.svg" alt="">
+                <h3>15 días de prueba</h3>
+                <p>o 1.000 kilómetros para que pruebes todo su potencial. Y añadimos un año de garantía ampliable.</p>
+            </article>
+            <article class="finan">
+                <img src="images/ventajas/finan-inmediata.svg" alt="">
+                <h3>Financiación fácil</h3>
+                <p>Te ofrecemos financiación para tu coche sin que tengas que cambiar de banco. ¡Sin complicaciones!    </p>
+            </article>
+        </section>
     </section>
 </body>
 </html>
