--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <section class="ventajas-banners">
             <article class="precio">
                 <img src="images/ventajas/mejor_precio.svg" alt="">
-                <h3>Mejor precio garatizado</h3>
+                <h3>Mejor precio <br>garatizado</h3>
                 <p>Con un único punto de venta físico y nuestro modelo de negocio digital ahorramos costes para garantizarte los precios más bajos. ¡Te devolvemos la diferencia!</p>
             </article>
             <article class="revisiones">
@@ -110,12 +110,12 @@
             </article>
             <article class="prueba">
                 <img src="images/ventajas/car-connect.svg" alt="">
-                <h3>15 días de prueba</h3>
+                <h3>15 días de <br>prueba</h3>
                 <p>o 1.000 kilómetros para que pruebes todo su potencial. Y añadimos un año de garantía ampliable.</p>
             </article>
             <article class="finan">
                 <img src="images/ventajas/finan-inmediata.svg" alt="">
-                <h3>Financiación fácil</h3>
+                <h3>Financiación<br> fácil</h3>
                 <p>Te ofrecemos financiación para tu coche sin que tengas que cambiar de banco. ¡Sin complicaciones!    </p>
             </article>
         </section>
